[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-replay-debugger-mcp"
version = "1.0.0"
description = "Agent Replay Debugger MCP — record every agent step + replay deterministically. Step-debugger for agentic loops. Audit-evidence signed exports. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "debugger", "replay", "agent-debugging", "audit-evidence", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Debuggers",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/a2a"
Repository = "https://github.com/CSOAI-ORG/agent-replay-debugger-mcp"

[project.scripts]
agent-replay-debugger-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
